# autograph-experiments

.github/workflows/: ci.yaml  release.yml
post-quantum-client-testing/: .gitignore  Cargo.toml  Dockerfile  README.md
post-quantum-client-testing/src/: constants.rs  ecdsa.rs  falcon.rs  main.rs  mldsa.rs  rsa.rs
post-quantum-server-testing/: README  README.md
post-quantum-server-testing/src/: go.mod  go.sum  main.go
post-quantum-server-testing/src/ecdsa/: ecdsa.go
post-quantum-server-testing/src/ecdsa_local/: ecdsa_local.go
post-quantum-server-testing/src/falcon/: falcon.go
post-quantum-server-testing/src/mldsa/: mldsa.go
post-quantum-server-testing/src/rsa/: rsa.go
post-quantum-server-testing/src/rsa_local/: rsa_local.go
results/: post-quantum-testing-results.md  pq-algorithm-research.md  pq-algorithm-specs.csv
