[package]
name = "post-quantum-client-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cloud-storage = "0.11.1"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
openssl = { version = "0.10.74", features = ["vendored"] }
oqs = { version = "0.11.0", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
sha2 = { version = "0.10.9", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.9"
